# AI-Agent

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  KB_FLOW.md  README.md  SYSTEM.md  _chk_fix.py  _inspect.py  _probe.py  main.py  render.yaml  requirements.txt
.github/workflows/: build-tauri.yml
config/: settings.yml
data/eval/: qa.jsonl
data/samples/: meeting_000000.txt  meeting_000001.txt  meeting_000002.txt  meeting_000003.txt  meeting_000004.txt  meeting_000005.txt  sample_meeting_01.txt  sample_meeting_02.txt
eval/: dataset.jsonl  last_result.csv  last_result.json  run_eval.py
prompts/: agent_system.txt  extraction.txt  rag_summarize.txt  report.txt
scripts/: clear_usage.py
server/: main.py
src/agent/: advisor.py  analysis_tools.py  code_tools.py  data_tools.py  middleware.py  react_agent.py  subagents.py  tools.py
src/eval/: evaluator.py  task_eval.py
src/graph/: supervisor.py
src/ingestion/: synthetic.py
src/memory/: profile.py  reports.py  threads.py
src/models/: factory.py
src/rag/: kb_service.py  meeting_kb.py  retriever.py  vector_store.py
src/reporting/: report_service.py
src/schemas/: investment.py
src/utils/: config.py  db.py  files.py  logger.py  paths.py  pricing.py  robust.py  stream.py  usage.py
tests/: test_pipeline.py
web/: next.config.ts  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/components/: chat-panel.tsx  command-palette.tsx  intro.tsx  login-screen.tsx  markdown.tsx  memory-sheet.tsx  mermaid-view.tsx  notification-bell.tsx  sessions.tsx  toaster.tsx  user-menu.tsx  worktable.tsx
web/components/views/: chat-view.tsx  eval-view.tsx  knowledge-view.tsx  monitoring-view.tsx  overview-view.tsx  page-container.tsx  profile-view.tsx  reports-view.tsx  settings-view.tsx
web/lib/: api.ts  auth.tsx  diagrams.ts  export-pdf.ts  format.ts  notifications.tsx
web/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
web/src-tauri/capabilities/: default.json
web/src-tauri/src/: lib.rs  main.rs
