[package]
name = "foodsta-advisor"
version = "0.1.0"
description = "Foodsta Kitchens AI Advisor — multi-agent investment advisor desktop/mobile shell"
authors = ["Foodsta"]
edition = "2021"

# lib 是桌面与移动端共享的入口（移动端把它编译成 cdylib）。
[lib]
name = "foodsta_advisor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: 系统托盘(桌面端最小化到托盘)
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 单实例(仅桌面，移动端无此概念)：防多开，再次启动唤回已开窗口。
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

# 发布构建瘦身：体积更小、启动更快。
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# debug 构建(含 `tauri android build --debug`)默认带完整调试符号，.so 体积巨大，
# 安卓 universal APK 能到 250MB+。本壳层只是 WebView 容器，不需要调试 Rust，
# 关掉调试符号并 strip，可把 debug 产物大幅瘦身。
[profile.dev]
debug = false
strip = true
