[package]
name = "foodsta-advisor"
version = "0.1.0"
description = "Foodsta Kitchens AI Advisor — multi-agent investment advisor desktop/mobile shell"
authors = ["Foodsta"]
edition = "2021"

# lib 是桌面与移动端共享的入口（移动端把它编译成 cdylib）。
[lib]
name = "foodsta_advisor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# tray-icon: 系统托盘(桌面端最小化到托盘)
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 规避上游不兼容：brotli 8.x 用 alloc-no-stdlib 3.x，但 Tauri 锁死的 brotli-decompressor 4.x 用 alloc 2.x，
# 二者凑在一起编译必失败(StandardAlloc 不满足另一版本的 Allocator trait)。仓库没提交 Cargo.lock，CI 每次
# 解析最新版就会把 brotli 拉到 8.x → 撞上。钉到 <8 强制回 7.x(同样用 alloc 2.x，与 decompressor 4.x 一致)——
# 这就是 Run #5 成功时的组合。brotli 只是 Tauri 内部压缩资源用的传递依赖，我们不直接用它。
brotli = "<8"

# 发布构建瘦身：体积更小、启动更快。
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# debug 构建(含 `tauri android build --debug`)默认带完整调试符号，.so 体积巨大，
# 安卓 universal APK 能到 250MB+。本壳层只是 WebView 容器，不需要调试 Rust，
# 关掉调试符号并 strip，可把 debug 产物大幅瘦身。
[profile.dev]
debug = false
strip = true
